--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,8 @@ dependencies {
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    runtimeOnly 'com.h2database:h2'
+//    runtimeOnly 'com.h2database:h2'
+//    implementation 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -52,7 +53,8 @@ dependencies {
     //webCrawl
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'org.seleniumhq.selenium:selenium-java:4.9.0'
-    implementation group: 'org.seleniumhq.selenium', name: 'selenium-devtools-v127', version: '4.23.0'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-devtools-v128', version: '4.24.0'
+
 }
 
 tasks.named('bootBuildImage') {
