--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     # 사용할 JDK 버전 설정
     strategy:
       matrix:
-        java-version: [17, 11]
+        java-version: [17]
 
     steps:
     # 코드 체크아웃
