--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,13 @@ jobs:
     # 프로젝트 빌드 및 테스트
     - name: Build with Gradle
       run: ./gradlew build --no-daemon
-
+      
+    # 환경 변수 설정
+      env:
+        DB_SOURCE_URL: ${{ secrets.DB_SOURCE_URL }}
+        DB_SOURCE_USERNAME: ${{ secrets.DB_SOURCE_USERNAME }}
+        DB_SOURCE_PASSWORD: ${{ secrets.DB_SOURCE_PASSWORD }}
+        
     # 테스트 리포트 저장 (optional)
     - name: Archive test results
       if: ${{ always() }}
