--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI for Spring Boot
 
-# 메인브랜치에 push나 pull_request시 실행
+# 메인 브랜치에 push나 pull_request 시 실행
 on:
   push:
     branches:
@@ -28,16 +28,19 @@ jobs:
     - name: Set up JDK ${{ matrix.java-version }}
       uses: actions/setup-java@v2
       with:
+        distribution: 'temurin'
         java-version: ${{ matrix.java-version }}
 
-    # 프로젝트 빌드 및 테스트
+    # gradle 권한 추가
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    # Gradle로 빌드 실행
     - name: Build with Gradle
       run: ./gradlew build --no-daemon
       
     # 환경 변수 설정
-      env:
-        DB_SOURCE_URL: ${{ secrets.DB_SOURCE_URL }}
-        DB_SOURCE_USERNAME: ${{ secrets.DB_SOURCE_USERNAME }}
-        DB_SOURCE_PASSWORD: ${{ secrets.DB_SOURCE_PASSWORD }}
-        
-
+    env:
+      DB_SOURCE_URL: ${{ secrets.DB_SOURCE_URL }}
+      DB_SOURCE_USERNAME: ${{ secrets.DB_SOURCE_USERNAME }}
+      DB_SOURCE_PASSWORD: ${{ secrets.DB_SOURCE_PASSWORD }}
