--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ plugins {
 group = 'com.example'
 version = '0.0.2'
 
+jar {
+    enabled = false
+}
+
 java {
     sourceCompatibility = '17'
 }
@@ -53,7 +57,7 @@ dependencies {
     //webCrawl
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'org.seleniumhq.selenium:selenium-java:4.9.0'
-    implementation group: 'org.seleniumhq.selenium', name: 'selenium-devtools-v128', version: '4.24.0'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.25.0'
 
 }
 
