--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Amazon EC2
+name: Deploy to Amazon EC2 using Docker
 
 on:
   push:
@@ -7,63 +7,65 @@ on:
 
 env:
   AWS_REGION: ap-northeast-2
-  S3_BUCKET_NAME: s3cepcdbucket
-  CODE_DEPLOY_APPLICATION_NAME: cep-codedeploy
-  CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: cep-deploy-group
+  DOCKER_IMAGE_NAME: 2zeroempty/cepdocker
+  EC2_HOST: ec2-user@52.79.209.72 
+  EC2_CONTAINER_NAME: app    
 
 permissions:
   contents: read
-
 jobs:
   deploy:
-    name: Deploy
+    name: Build and Deploy Docker Image
     runs-on: ubuntu-latest
     environment: production
 
     steps:
-    # (1) 기본 체크아웃
-    - name: Checkout
-      uses: actions/checkout@v3
+      # (1) 기본 체크아웃
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    # (2) JDK 17 세팅
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: '17'
-        
-    # gradlew 권한 추가
-    - name: Set executable permission for gradlew
-      run: chmod +x gradlew
-      
-    # (3) Gradle build (Test 제외)
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@0d13054264b0bb894ded474f08ebb30921341cee
-      with:
-        arguments: clean build -x test
+      # (2) JDK 17 세팅
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-    # (4) AWS 인증 (IAM 사용자 Access Key, Secret Key 활용)
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+      # (3) Gradle 빌드
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@v3
+        with:
+          arguments: clean build -x test  # 테스트 포함 여부에 따라 옵션 변경 가능
 
-    # (5) 빌드 결과물을 S3 버킷에 업로드
-    - name: Upload to AWS S3
-      run: |
-        aws deploy push \
-          --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
-          --ignore-hidden-files \
-          --s3-location s3://$S3_BUCKET_NAME/$GITHUB_SHA.zip \
-          --source .
+      # (4) Docker 설정 및 로그인
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
 
-    # (6) S3 버킷에 있는 파일을 대상으로 CodeDeploy 실행
-    - name: Deploy to AWS EC2 from S3
-      run: |
-        aws deploy create-deployment \
-          --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
-          --deployment-config-name CodeDeployDefault.AllAtOnce \
-          --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
-          --s3-location bucket=$S3_BUCKET_NAME,key=$GITHUB_SHA.zip,bundleType=zip
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # (5) Docker 이미지 빌드 및 푸시
+      - name: Build and Push Docker Image
+        run: |
+          docker build -t ${{ env.DOCKER_IMAGE_NAME }}:latest .
+          docker push ${{ env.DOCKER_IMAGE_NAME }}:latest
+
+      # (6) SSH 키 파일 생성
+      - name: Create SSH key file
+        run: |
+          echo "${{ secrets.EC2_SSH_KEY }}" | sudo tee ~/ec2_key.pem > /dev/null
+          sudo mkdir -p ~/.ssh
+          sudo mv ~/ec2_key.pem ~/.ssh/ec2_key.pem
+          sudo chown runner:runner ~/.ssh/ec2_key.pem
+          sudo chmod 600 ~/.ssh/ec2_key.pem
+      # (7) EC2에 SSH로 연결하여 Docker 컨테이너 배포
+      - name: Deploy to EC2
+        run: |
+          ssh -vvv -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem -p 2200 ec2-user@52.79.209.72 << 'EOF'
+            sudo systemctl start docker || echo "Docker is already running."
+            cd /home/ec2-user/app
+            ./start.sh
+          EOF
