--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to Amazon EC2 using Docker
 on:
   push:
     branches:
-      - docker
+      - main
 
 env:
   AWS_REGION: ap-northeast-2
