--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,13 @@
 name: Deploy to Amazon EC2 using Docker
 
 on:
-  push:
+  workflow_run:
+    workflows: ["CI for Spring Boot"]  # CI 워크플로우 이름
+    types:
+      - completed  # CI 워크플로우 완료 시 트리거
     branches:
-      - main
+      - main    # main 브랜치에서만 트리거
+  workflow_dispatch: 
 
 env:
   AWS_REGION: ap-northeast-2
@@ -46,12 +50,16 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
+            
       # (5) Docker 이미지 빌드 및 푸시
       - name: Build and Push Docker Image
         run: |
-          docker build -t ${{ env.DOCKER_IMAGE_NAME }}:latest .
-          docker push ${{ env.DOCKER_IMAGE_NAME }}:latest
+            docker system prune --all --force
+            docker build --no-cache \
+            --build-arg AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }} \
+            --build-arg AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+            -t ${{ env.DOCKER_IMAGE_NAME }}:latest .
+            docker push ${{ env.DOCKER_IMAGE_NAME }}:latest
 
       # (6) SSH 키 파일 생성
       - name: Create SSH key file
@@ -69,5 +77,11 @@ jobs:
             docker pull ${{ env.DOCKER_IMAGE_NAME }}:latest
             docker stop ${{ env.EC2_CONTAINER_NAME }} || true
             docker rm ${{ env.EC2_CONTAINER_NAME }} || true
-            docker run -d --name ${{ env.EC2_CONTAINER_NAME }} -p 8080:8080 -e DB_SOURCE_URL=${{ secrets.DB_SOURCE_URL }} -e DB_SOURCE_USERNAME=${{ secrets.DB_SOURCE_USERNAME }} -e DB_SOURCE_PASSWORD=${{ secrets.DB_SOURCE_PASSWORD }}  ${{ env.DOCKER_IMAGE_NAME }}:latest
+            docker run -d --name ${{ env.EC2_CONTAINER_NAME }} -p 8080:8080 \
+              -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+              -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+              -e DB_SOURCE_URL=${{ secrets.DB_SOURCE_URL }} \
+              -e DB_SOURCE_USERNAME=${{ secrets.DB_SOURCE_USERNAME }} \
+              -e DB_SOURCE_PASSWORD=${{ secrets.DB_SOURCE_PASSWORD }} \
+              ${{ env.DOCKER_IMAGE_NAME }}:latest
           EOF
