--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,22 +70,19 @@ jobs:
           sudo chown runner:runner ~/.ssh/ec2_key.pem
           sudo chmod 600 ~/.ssh/ec2_key.pem
           
-      # (7) EC2에 SSH로 연결하여 Docker 컨테이너 배포
-      - name: Deploy to EC2
+      # (7) EC2에 SSH로 연결하여 Docker Compose실행
+      - name: Deploy to EC2 using Docker Compose
         run: |
-          ssh -vvv -o StrictHostKeyChecking=no -i ~/.ssh/ec2_key.pem -p 2200 ec2-user@52.79.209.72 << 'EOF'
-            echo "Cleaning up unused Docker resources..."
-            sudo docker system prune --all --force
-            sudo docker volume prune --force
-            sudo systemctl start docker || echo "Docker is already running."
-            sudo docker pull ${{ env.DOCKER_IMAGE_NAME }}:latest
-            sudo docker stop ${{ env.EC2_CONTAINER_NAME }} || true
-            sudo docker rm ${{ env.EC2_CONTAINER_NAME }} || true
-            sudo docker run -d --name ${{ env.EC2_CONTAINER_NAME }} -p 8080:8080 \
-              -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-              -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-              -e DB_SOURCE_URL=${{ secrets.DB_SOURCE_URL }} \
-              -e DB_SOURCE_USERNAME=${{ secrets.DB_SOURCE_USERNAME }} \
-              -e DB_SOURCE_PASSWORD=${{ secrets.DB_SOURCE_PASSWORD }} \
-              ${{ env.DOCKER_IMAGE_NAME }}:latest
+          ssh -i ~/.ssh/ec2_key.pem -p 2200 ec2-user@52.79.209.72 << 'EOF'
+            echo "Deploying with Docker Compose..."
+      
+            cd ~
+            sudo docker-compose down
+            sudo docker-compose pull
+            AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+            AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+            DB_SOURCE_URL=${{ secrets.DB_SOURCE_URL }} \
+            DB_SOURCE_USERNAME=${{ secrets.DB_SOURCE_USERNAME }} \
+            DB_SOURCE_PASSWORD=${{ secrets.DB_SOURCE_PASSWORD }} \
+            sudo docker-compose up -d
           EOF
