--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -75,13 +75,15 @@ jobs:
         run: |
           ssh -i ~/.ssh/ec2_key.pem -p 2200 -o StrictHostKeyChecking=no -t ec2-user@52.79.209.72 << 'EOF'
             echo "Deploying with Docker Compose..."
+
+            echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" > .env
+            echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env
+            echo "DB_SOURCE_URL=${{ secrets.DB_SOURCE_URL }}" >> .env
+            echo "DB_SOURCE_USERNAME=${{ secrets.DB_SOURCE_USERNAME }}" >> .env
+            echo "DB_SOURCE_PASSWORD=${{ secrets.DB_SOURCE_PASSWORD }}" >> .env
+
             cd ~
             sudo docker-compose down
             sudo docker-compose pull
-            AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-            AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-            DB_SOURCE_URL=${{ secrets.DB_SOURCE_URL }} \
-            DB_SOURCE_USERNAME=${{ secrets.DB_SOURCE_USERNAME }} \
-            DB_SOURCE_PASSWORD=${{ secrets.DB_SOURCE_PASSWORD }} \
             sudo docker-compose up -d
           EOF
