--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,7 +84,7 @@ jobs:
             
             sudo docker system prune --all --force
             sudo docker volume prune --force
-            
+            sudo systemctl stop nginx
             cd ~
             sudo docker-compose down
             sudo docker-compose pull
