--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,7 +76,7 @@ jobs:
           ssh -i ~/.ssh/ec2_key.pem -p 2200 -o StrictHostKeyChecking=no -t ec2-user@52.79.209.72 << 'EOF'
             echo "Deploying with Docker Compose..."
             
-            echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" > .env
+            echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }}" > .env
             echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env
             echo "DB_SOURCE_URL=${{ secrets.DB_SOURCE_URL }}" >> .env
             echo "DB_SOURCE_USERNAME=${{ secrets.DB_SOURCE_USERNAME }}" >> .env
