--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -88,4 +88,7 @@ jobs:
             sudo docker-compose down
             sudo docker-compose pull
             sudo docker-compose up -d
+            docker update --restart always backend1
+            docker update --restart always backend2
+            docker update --restart always nginx
           EOF
